# uxlock

./: README.md
litl/: .gitignore  CMakeLists.txt  Config.cmake  Makefile  Makefile.config  README.md  compile_commands.json  result.txt
litl/bench/: bench.c  bench_block.c  check.c  cri_bench.c  csbench.c  nest_bench.c  rwbench.c  thbench.c  ux_cs_bench.c
litl/include/: aslblock.h  cspick.h  cst.h  csupperbound.h  libaslblock.h  libcspick.h  libcsupper.h  libuta.h  libutablocking.h  libuxactivekc.h  libuxpick.h  malthusian.h  mcssteal.h  mcswake.h  mutexee.h  padding.h  platform_defs.h  rwtas.h  spinlock.h  test  test.c  topology.in  uta.h  utabind.h  utablocking.h  utafts.h  utamutexee.h  utascl.h  utaspc.h  utils.h  uxactive.h  uxactivekc.h  uxactivekcf.h  uxpick.h  uxshfl.h
litl/scripts/: measure.sh  perf.data  perf.data.old  run_block_exp1.sh  run_check.sh  run_exp1.sh  run_exp10.sh  run_exp11.sh  run_exp2.sh  run_exp3.sh  run_exp4.sh  run_exp5.sh  run_exp5_1.sh  run_exp5_2.sh  run_exp6.sh  run_exp7.sh  run_exp8.sh  run_exp9.sh  run_test.sh  run_test_bind.sh  run_test_local.sh  run_utafts.sh  uxtail_tot
litl/src/: CMakeLists.txt  Makefile  aslblock.c  cspick.c  cst.c  csupperbound.c  interpose.c  interpose.h  interpose.map  malthusian.c  mcs.c  mcssteal.c  mcswake.c  mutexee.c  rwtas.c  spinlock.c  ticket.c  uta.c  utabind.c  utablocking.c  utablocking_unfait.c  utafts.c  utamutexee.c  utascl.c  utaspc.c  utils.c  utils.h  uxactive.c  uxpick.c  uxshfl.c  waiting_policy.h
llvm_demo/: .gitignore  Makefile  padding.h  topology.h  uta.c  uta.h  utils.c  utils.h
llvm_demo/bench/: cri_bench.c  nest_bench.c  ux_bench.c
llvm_demo/scripts/: measure.sh  measure50.sh  measure_ux_ave.sh  run_config.sh  run_ux.sh
llvm_demo/uta_pass/: Makefile  uta_pass.cpp
